--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="/css/style.css">
 
     <!--Font Awesome Linking-->
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="stylesheet" href="/css/fontawesome.min.css">
 
 </head>
 
@@ -36,7 +36,7 @@
                                 <div id="myDropdown2" class="nav_toggle_dropdown_content">
                                     <a href="https://grammobarta.com/sports">Sports</a>
                                     <a href="https://grammobarta.com/politics">Politics</a>
-                                    <!-- <a href="#">Others</a> -->
+                                    <a href="#">Others</a>
                                 </div>
                             </div>
                         </li>
@@ -112,7 +112,7 @@
                                 <div class="flex justify_center">
                                     <img class="images" src="/images/logo.jpg" alt="" style="height: 50px;">
                                 </div>
-                                <h1 class="flex justify_center">Baazar Potrika</h1>
+                                <h1 class="flex justify_center">Grammo Barta</h1>
                                 <div class="divider">
                                     <div class="shadow"></div>
                                 </div>
@@ -173,7 +173,7 @@
                                             <div class="hot_picks_heading">Hot Picks</div>
                                             <div class="hot_picks_items flex">
                                                 <div class="hot_picks_img">
-                                                    <a href="#"><img class="hot_picks_img_object" src="images/img-list.jpg" alt="Generic placeholder image"></a>
+                                                    <a href="#"><img class="hot_picks_img_object" src="/images/img-list.jpg" alt="Generic placeholder image"></a>
                                                 </div>
                                                 <div class="hot_picks_body">
                                                     <h3 class="hot_picks_body_heading"><a href="#">Machester United start the player
@@ -183,7 +183,7 @@
                                             </div>
                                             <div class="hot_picks_items flex">
                                                 <div class="hot_picks_img">
-                                                    <a href="#"><img class="hot_picks_img_object" src="images/img-list.jpg" alt="Generic placeholder image"></a>
+                                                    <a href="#"><img class="hot_picks_img_object" src="/images/img-list.jpg" alt="Generic placeholder image"></a>
                                                 </div>
                                                 <div class="hot_picks_body">
                                                     <h3 class="hot_picks_body_heading"><a href="#">Machester United start the player
@@ -193,7 +193,7 @@
                                             </div>
                                             <div class="hot_picks_items flex">
                                                 <div class="hot_picks_img">
-                                                    <a href="#"><img class="hot_picks_img_object" src="images/img-list.jpg" alt="Generic placeholder image"></a>
+                                                    <a href="#"><img class="hot_picks_img_object" src="/images/img-list.jpg" alt="Generic placeholder image"></a>
                                                 </div>
                                                 <div class="hot_picks_body">
                                                     <h3 class="hot_picks_body_heading"><a href="#">Machester United start the player
@@ -209,19 +209,19 @@
                                         <div class="slider">
                                             <div class="slider_items">
                                                 <div class="item active">
-                                                    <img src="images/img-carousel1.jpg" />
+                                                    <img src="/images/img-carousel1.jpg" />
                                                     <div class="caption">
                                                         Slide 1
                                                     </div>
                                                 </div>
                                                 <div class="item">
-                                                    <img src="images/img-carousel2.jpg" />
+                                                    <img src="/images/img-carousel2.jpg" />
                                                     <div class="caption">
                                                         Slide 2
                                                     </div>
                                                 </div>
                                                 <div class="item">
-                                                    <img src="images/coffee.jpg" />
+                                                    <img src="/images/coffee.jpg" />
                                                     <div class="caption">
                                                         Slide 3
                                                     </div>
@@ -239,7 +239,7 @@
                                         <div class="other_news_heading" style="color: red;">Other News</div>
                                         <div class="other_news_items flex">
                                             <div class="other_news_items_img">
-                                                <a href="#"><img class="other_news_items_img_object" src="images/img-list5.jpg" alt="Generic placeholder image"></a>
+                                                <a href="#"><img class="other_news_items_img_object" src="/images/img-list5.jpg" alt="Generic placeholder image"></a>
                                             </div>
                                             <div class="other_news_items_body">
                                                 <h4 class="other_news_items_heading"><a href="#">Spain going to made class football</a></h4>
@@ -248,7 +248,7 @@
                                         </div>
                                         <div class="other_news_items flex">
                                             <div class="other_news_items_img">
-                                                <a href="#"><img class="other_news_items_img_object" src="images/img-list5.jpg" alt="Generic placeholder image"></a>
+                                                <a href="#"><img class="other_news_items_img_object" src="/images/img-list5.jpg" alt="Generic placeholder image"></a>
                                             </div>
                                             <div class="other_news_items_body">
                                                 <h4 class="other_news_items_heading"><a href="#">Spain going to made class football</a></h4>
@@ -256,7 +256,7 @@
                                         </div>
                                         <div class="other_news_items flex">
                                             <div class="other_news_items_img">
-                                                <a href="#"><img class="other_news_items_img_object" src="images/img-list5.jpg" alt="Generic placeholder image"></a>
+                                                <a href="#"><img class="other_news_items_img_object" src="/images/img-list5.jpg" alt="Generic placeholder image"></a>
                                             </div>
                                             <div class="other_news_items_body">
                                                 <h4 class="other_news_items_heading"><a href="#">Spain going to made class football</a></h4>
@@ -264,7 +264,7 @@
                                         </div>
                                         <div class="other_news_items flex">
                                             <div class="other_news_items_img">
-                                                <a href="#"><img class="other_news_items_img_object" src="images/img-list5.jpg" alt="Generic placeholder image"></a>
+                                                <a href="#"><img class="other_news_items_img_object" src="/images/img-list5.jpg" alt="Generic placeholder image"></a>
                                             </div>
                                             <div class="other_news_items_body">
                                                 <h4 class="other_news_items_heading"><a href="#">Spain going to made class football</a></h4>
@@ -287,7 +287,7 @@
                                 </div>
                                 <div class="category_items category_style flex">
                                     <div class="category_items_img">
-                                        <img src="images/b21.jpg " alt=" ">
+                                        <img src="/images/b21.jpg " alt=" ">
                                     </div>
                                     <div class="category_items_body">
                                         <a href="#" class="category_items_headline">
@@ -302,7 +302,7 @@
                                 </div>
                                 <div class="category_items category_style flex">
                                     <div class="category_items_img">
-                                        <img src="images/b21.jpg " alt=" ">
+                                        <img src="/images/b21.jpg " alt=" ">
                                     </div>
                                     <div class="category_items_body">
                                         <a href="#" class="category_items_headline">
@@ -322,7 +322,7 @@
                                 </div>
                                 <div class="category_items category_style flex">
                                     <div class="category_items_img">
-                                        <img src="images/b21.jpg " alt=" ">
+                                        <img src="/images/b21.jpg " alt=" ">
                                     </div>
                                     <div class="category_items_body">
                                         <a href="#" class="category_items_headline">
@@ -336,7 +336,7 @@
                                 </div>
                                 <div class="category_items category_style flex">
                                     <div class="category_items_img">
-                                        <img src="images/b21.jpg " alt=" ">
+                                        <img src="/images/b21.jpg " alt=" ">
                                     </div>
                                     <div class="category_items_body">
                                         <a href="#" class="category_items_headline">
@@ -356,7 +356,7 @@
                                 </div>
                                 <div class="category_items category_style flex">
                                     <div class="category_items_img">
-                                        <img src="images/b21.jpg " alt=" ">
+                                        <img src="/images/b21.jpg " alt=" ">
                                     </div>
                                     <div class="category_items_body">
                                         <a href="#" class="category_items_headline">
@@ -370,7 +370,7 @@
                                 </div>
                                 <div class="category_items category_style flex">
                                     <div class="category_items_img">
-                                        <img src="images/b21.jpg " alt=" ">
+                                        <img src="/images/b21.jpg " alt=" ">
                                     </div>
                                     <div class="category_items_body">
                                         <a href="#" class="category_items_headline">
@@ -525,7 +525,7 @@
                             <div class="footer_items footer_contact_form">
                                 <h2>Contact us</h2>
                                 <br>
-                                <form action="/assets/index.html" method="post">
+                                <form action="https://grammobarta.com/" method="post">
                                     <input type="email" name="email" class="text_input contact_form_input" placeholder="Your email address...">
                                     <textarea rows="4" name="message" class="text_input contact_form_input" placeholder="Your message..."></textarea>
                                     <button type="submit" class="contact_btn">
