--- a/politics/politics-news-1.html
+++ b/politics/politics-news-1.html
@@ -20,7 +20,7 @@
         <div class="nav_toggle_background">
             <div class="nav_toggle_logo">
                 <img class="images" src="/images/logo.jpg" alt="" style="height: 50px;">
-                <h1><span>Baazar</span> Potrika</h1>
+                <h1><span>Grammo</span> Barta</h1>
             </div>
             <div class="nav_toggle_menu">
                 <div>
@@ -36,7 +36,7 @@
                                 <div id="myDropdown2" class="nav_toggle_dropdown_content">
                                     <a href="https://grammobarta.com/sports">Sports</a>
                                     <a href="https://grammobarta.com/politics">Politics</a>
-                                    <!-- <a href="#">Others</a> -->
+                                    <a href="#">Others</a>
                                 </div>
                             </div>
                         </li>
@@ -112,7 +112,7 @@
                                 <div class="flex justify_center">
                                     <img class="images" src="/images/logo.jpg" alt="" style="height: 50px;">
                                 </div>
-                                <h1 class="flex justify_center">Baazar Potrika</h1>
+                                <h1 class="flex justify_center">Grammo Barta</h1>
                                 <div class="divider">
                                     <div class="shadow"></div>
                                 </div>
@@ -225,21 +225,21 @@
                                         <div class="item active">
                                             <img class="images" src="/images/coffee.jpg" />
                                             <div class="single_recent_posts_info">
-                                                <h4><a href="single.html">One day your life will flash before your eyes</a></h4>
+                                                <h4><a href="#">One day your life will flash before your eyes</a></h4>
                                                 <i class="far fa-calendar"> May 30, 2021</i>
                                             </div>
                                         </div>
                                         <div class="item">
                                             <img class="images" src="/images/coffee.jpg" />
                                             <div class="single_recent_posts_info">
-                                                <h4><a href="single.html">Another day in the land of sand</a></h4>
+                                                <h4><a href="#">Another day in the land of sand</a></h4>
                                                 <i class="far fa-calendar"> May 31, 2021</i>
                                             </div>
                                         </div>
                                         <div class="item">
                                             <img class="images" src="/images/coffee.jpg" />
                                             <div class="single_recent_posts_info">
-                                                <h4><a href="single.html">In the era of devils, be a good man.</a></h4>
+                                                <h4><a href="#">In the era of devils, be a good man.</a></h4>
                                                 <i class="far fa-calendar"> June 1, 2021</i>
                                             </div>
                                         </div>
@@ -301,7 +301,7 @@
                             <div class="footer_items footer_contact_form">
                                 <h2>Contact us</h2>
                                 <br>
-                                <form action="/assets/index.html" method="post">
+                                <form action="https://grammobarta.com/" method="post">
                                     <input type="email" name="email" class="text_input contact_form_input" placeholder="Your email address...">
                                     <textarea rows="4" name="message" class="text_input contact_form_input" placeholder="Your message..."></textarea>
                                     <button type="submit" class="contact_btn">
