--- a/sports.html
+++ b/sports.html
@@ -36,7 +36,7 @@
                                 <div id="myDropdown2" class="nav_toggle_dropdown_content">
                                     <a href="https://grammobarta.com/sports">Sports</a>
                                     <a href="https://grammobarta.com/politics">Politics</a>
-                                    <!-- <a href="#">Others</a> -->
+                                    <a href="#">Others</a>
                                 </div>
                             </div>
                         </li>
@@ -112,7 +112,7 @@
                                 <div class="flex justify_center">
                                     <img class="images" src="/images/logo.jpg" alt="" style="height: 50px;">
                                 </div>
-                                <h1 class="flex justify_center">Baazar Potrika</h1>
+                                <h1 class="flex justify_center">Grammo Barta</h1>
                                 <div class="divider">
                                     <div class="shadow"></div>
                                 </div>
@@ -123,19 +123,13 @@
                         <div class="page_container flex">
                             <a href="https://grammobarta.com/" class="active">Home</a>
                             <div class="dropdown">
-                                <button class="dropbtn">খবর
+                                <button class="dropbtn">News 
                                     <i class="fas fa-caret-down"></i>
                                     </button>
                                 <div class="dropdown_content">
-<<<<<<< HEAD
                                     <a href="https://grammobarta.com/sports">Sports</a>
                                     <a href="https://grammobarta.com/politics">Politics</a>
                                     <a href="#">Others</a>
-=======
-                                    <a href="sports.html">স্পোর্টস</a>
-                                    <a href="politics.html">রাজনীতি</a>
-                                    <a href="#">অন্যান্য</a>
->>>>>>> f18454eeaae8fcb0b7f24d421e10a02629c76786
                                 </div>
                             </div>
                             <div class="dropdown">
@@ -143,21 +137,12 @@
                                         <i class="fas fa-caret-down"></i>
                                     </button>
                                 <div class="dropdown_content">
-<<<<<<< HEAD
                                     <a href="https://grammobarta.com/cooking">Cooking</a>
                                     <a href="https://grammobarta.com/travel">Travel</a>
                                 </div>
                             </div>
                             <a href="https://grammobarta.com/photography">Photography</a>
                             <a href="https://grammobarta.com/contact">Contact us</a>
-=======
-                                    <a href="cooking.html">রান্নাবান্না</a>
-                                    <a href="travel.html">ভ্রমণ</a>
-                                </div>
-                            </div>
-                            <a href="photography.html">ফটোগ্রাফি</a>
-                            <a href="contact.html">যোগাযোগ করুন</a>
->>>>>>> f18454eeaae8fcb0b7f24d421e10a02629c76786
                         </div>
                     </div>
                 </nav>
@@ -166,15 +151,10 @@
                 <section class="page_container">
                     <div class="my_row">
                         <div class="category_news_section col_med_12">
-                            <h1 class="category_news_section_heading">স্পোর্টস নিউজ</h1>
+                            <h1 class="category_news_section_heading">SPORTS NEWS</h1>
                             <ul class="back_links flex">
-<<<<<<< HEAD
                                 <li><a href="https://grammobarta.com/">Home</a><i class="fas fa-long-arrow-alt-right"></i></li>
                                 <li>Sports</li>
-=======
-                                <li><a href="index.html">হোম</a><i class="fas fa-long-arrow-alt-right"></i></li>
-                                <li>স্পোর্টস</li>
->>>>>>> f18454eeaae8fcb0b7f24d421e10a02629c76786
                             </ul>
                         </div>
                     </div>
@@ -186,21 +166,21 @@
                         <div class="col_med_12">
                             <div class="category_post_items flex">
                                 <div class="category_posts col_med_4">
-                                    <a href="https://grammobarta.com/sports/sports-news-1"><img class="images" src="/images/img-carousel2.jpg" alt=""></a>
+                                    <img class="images" src="/images/img-carousel2.jpg" alt="">
                                     <div class="date">31 May 2021</div>
                                     <a href="https://grammobarta.com/sports/sports-news-1">
                                         <h4 class="text-uppercase">Natun kore 15 din er lockdown goshona korlo sorkar.</h4>
                                     </a>
                                 </div>
                                 <div class="category_posts col_med_4">
-                                    <a href="https://grammobarta.com/sports/sports-news-1"><img class="images" src="/images/img-carousel1.jpg" alt=""></a>
+                                    <img class="images" src="/images/img-carousel1.jpg" alt="">
                                     <div class="date">31 May 2021</div>
                                     <a href="https://grammobarta.com/sports/sports-news-1">
                                         <h4 class="text-uppercase">School college office adalot sob kicu bondho rakhte hbe.</h4>
                                     </a>
                                 </div>
                                 <div class="category_posts col_med_4">
-                                    <a href="https://grammobarta.com/sports/sports-news-1"><img class="images" src="/images/img-carousel2.jpg" alt=""></a>
+                                    <img class="images" src="/images/img-carousel2.jpg" alt="">
                                     <div class="date">31 May 2021</div>
                                     <a href="https://grammobarta.com/sports/sports-news-1">
                                         <h4 class="text-uppercase">Joruri porisheba,mudi dokan,osudh er dokan,mistir dokan chara somosto kicho bondho thakbe.</h4>
@@ -216,13 +196,9 @@
                     <div class="page_container">
                         <div class="footer_wrapper">
                             <div class="footer_items footer_about">
-<<<<<<< HEAD
                                 <h1><span>Grammo</span> Barta</h1>
-=======
-                                <h1><span>গ্রাম্য</span>বার্তা</h1>
->>>>>>> f18454eeaae8fcb0b7f24d421e10a02629c76786
                                 <br>
-                                <p>আমাদের পারিপার্শ্বিক খবর, জরুরী তথ্য, শিক্ষা ও চাকরি সম্বন্ধিত তথ্য, ভ্রমন ব্লগ  আপনাদের কাছে পৌঁছে দেওয়া এবং এই বিপদকালীন পরিস্থিতিতে একে ওপরের পাশে দাঁড়ানোই আমাদের একমাত্র উদ্দেশ্য </p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id sunt, ex eligendi harum possimus sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores asperiores ea eum, tempore architecto corporis.</p>
                                 <br>
                                 <div class="footer_contact">
                                     <span><i class="fas fa-phone"></i> &nbsp; 123-456-789</span>
@@ -240,7 +216,6 @@
                                 <h2>Quick Links</h2>
                                 <br>
                                 <ul>
-<<<<<<< HEAD
                                     <a href="https://grammobarta.com/">
                                         <li>Home</li>
                                     </a>
@@ -249,21 +224,10 @@
                                     </a>
                                     <a href="https://grammobarta.com/politics">
                                         <li>Politics</li>
-=======
-                                    <a href="index.html">
-                                        <li>হোম</li>
-                                    </a>
-                                    <a href="sports.html">
-                                        <li>স্পোর্টস</li>
-                                    </a>
-                                    <a href="politics.html">
-                                        <li>রাজনীতি</li>
->>>>>>> f18454eeaae8fcb0b7f24d421e10a02629c76786
                                     </a>
                                     <a href="#">
-                                        <li>অন্যান্য</li>
+                                        <li>Others</li>
                                     </a>
-<<<<<<< HEAD
                                     <a href="https://grammobarta.com/cooking">
                                         <li>Cooking</li>
                                     </a>
@@ -272,23 +236,13 @@
                                     </a>
                                     <a href="https://grammobarta.com/contact">
                                         <li>Contact Us</li>
-=======
-                                    <a href="cooking.html">
-                                        <li>রান্নাবান্না</li>
-                                    </a>
-                                    <a href="travel.html">
-                                        <li>ভ্রমণ</li>
-                                    </a>
-                                    <a href="contact.html">
-                                        <li>আমাদের সাথে যোগাযোগ করুন</li>
->>>>>>> f18454eeaae8fcb0b7f24d421e10a02629c76786
                                     </a>
                                 </ul>
                             </div>
                             <div class="footer_items footer_contact_form">
                                 <h2>Contact us</h2>
                                 <br>
-                                <form action="/assets/index.html" method="post">
+                                <form action="https://grammobarta.com/" method="post">
                                     <input type="email" name="email" class="text_input contact_form_input" placeholder="Your email address...">
                                     <textarea rows="4" name="message" class="text_input contact_form_input" placeholder="Your message..."></textarea>
                                     <button type="submit" class="contact_btn">
