--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <div class="nav_toggle_background">
             <div class="nav_toggle_logo">
                 <img class="images" src="/images/logo.jpg" alt="" style="height: 50px;">
-                <h1><span>Baazar</span> Potrika</h1>
+                <h1><span>Grammo</span> Barta</h1>
             </div>
             <div class="nav_toggle_menu">
                 <div>
@@ -36,7 +36,7 @@
                                 <div id="myDropdown2" class="nav_toggle_dropdown_content">
                                     <a href="https://grammobarta.com/sports">Sports</a>
                                     <a href="https://grammobarta.com/politics">Politics</a>
-                                    <!-- <a href="#">Others</a> -->
+                                    <a href="#">Others</a>
                                 </div>
                             </div>
                         </li>
@@ -112,7 +112,7 @@
                                 <div class="flex justify_center">
                                     <img class="images" src="/images/logo.jpg" alt="" style="height: 50px;">
                                 </div>
-                                <h1 class="flex justify_center">Baazar Potrika</h1>
+                                <h1 class="flex justify_center">Grammo Barta</h1>
                                 <div class="divider">
                                     <div class="shadow"></div>
                                 </div>
@@ -171,11 +171,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="contact-section">
-
-
-                </div>
-
 
                 <!-- Footer Section -->
                 <div class="footer">
@@ -228,7 +223,7 @@
                             <div class="footer_items footer_contact_form">
                                 <h2>Contact us</h2>
                                 <br>
-                                <form action="/assets/index.html" method="post">
+                                <form action="https://grammobarta.com/" method="post">
                                     <input type="email" name="email" class="text_input contact_form_input" placeholder="Your email address...">
                                     <textarea rows="4" name="message" class="text_input contact_form_input" placeholder="Your message..."></textarea>
                                     <button type="submit" class="contact_btn">
@@ -247,10 +242,10 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script type="text/javascript " src="https://code.jquery.com/jquery-1.11.0.min.js "></script>
+    <script type="text/javascript " src="https://code.jquery.com/jquery-migrate-1.2.1.min.js "></script>
+    <script type="text/javascript " src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js "></script>
+    <script src="/js/main.js "></script>
 </body>
 
 </html>
