--- a/photography.html
+++ b/photography.html
@@ -20,7 +20,7 @@
         <div class="nav_toggle_background">
             <div class="nav_toggle_logo">
                 <img class="images" src="/images/logo.jpg" alt="" style="height: 50px;">
-                <h1><span>Baazar</span> Potrika</h1>
+                <h1><span>Grammo</span> Barta</h1>
             </div>
             <div class="nav_toggle_menu">
                 <div>
@@ -36,7 +36,7 @@
                                 <div id="myDropdown2" class="nav_toggle_dropdown_content">
                                     <a href="https://grammobarta.com/sports">Sports</a>
                                     <a href="https://grammobarta.com/politics">Politics</a>
-                                    <!-- <a href="#">Others</a> -->
+                                    <a href="#">Others</a>
                                 </div>
                             </div>
                         </li>
@@ -112,7 +112,7 @@
                                 <div class="flex justify_center">
                                     <img class="images" src="/images/logo.jpg" alt="" style="height: 50px;">
                                 </div>
-                                <h1 class="flex justify_center">Baazar Potrika</h1>
+                                <h1 class="flex justify_center">Grammo Barta</h1>
                                 <div class="divider">
                                     <div class="shadow"></div>
                                 </div>
@@ -153,7 +153,7 @@
                         <div class="category_news_section col_med_12">
                             <h1 class="category_news_section_heading">PHOTOGRAPHY</h1>
                             <ul class="back_links flex">
-                                <li><a href="index.html">Home</a><i class="fas fa-long-arrow-alt-right"></i></li>
+                                <li><a href="https://grammobarta.com/">Home</a><i class="fas fa-long-arrow-alt-right"></i></li>
                                 <li>Photography</li>
                             </ul>
                         </div>
@@ -166,21 +166,21 @@
                         <div class="col_med_12">
                             <div class="category_post_items flex">
                                 <div class="category_posts col_med_4">
-                                    <img class="images" src="/assets/images/img-carousel2.jpg" alt="">
+                                    <img class="images" src="/images/img-carousel2.jpg" alt="">
                                     <div class="date">31 May 2021</div>
                                     <a href="#">
                                         <h4 class="text-uppercase">Natun kore 15 din er lockdown goshona korlo sorkar.</h4>
                                     </a>
                                 </div>
                                 <div class="category_posts col_med_4">
-                                    <img class="images" src="/assets/images/img-carousel1.jpg" alt="">
+                                    <img class="images" src="/images/img-carousel1.jpg" alt="">
                                     <div class="date">31 May 2021</div>
                                     <a href="#">
                                         <h4 class="text-uppercase">School college office adalot sob kicu bondho rakhte hbe.</h4>
                                     </a>
                                 </div>
                                 <div class="category_posts col_med_4">
-                                    <img class="images" src="/assets/images/img-carousel2.jpg" alt="">
+                                    <img class="images" src="/images/img-carousel2.jpg" alt="">
                                     <div class="date">31 May 2021</div>
                                     <a href="#">
                                         <h4 class="text-uppercase">Joruri porisheba,mudi dokan,osudh er dokan,mistir dokan chara somosto kicho bondho thakbe.</h4>
@@ -242,7 +242,7 @@
                             <div class="footer_items footer_contact_form">
                                 <h2>Contact us</h2>
                                 <br>
-                                <form action="/assets/index.html" method="post">
+                                <form action="https://grammobarta.com/" method="post">
                                     <input type="email" name="email" class="text_input contact_form_input" placeholder="Your email address...">
                                     <textarea rows="4" name="message" class="text_input contact_form_input" placeholder="Your message..."></textarea>
                                     <button type="submit" class="contact_btn">
