--- a/cooking.html
+++ b/cooking.html
@@ -169,22 +169,17 @@
                                     <a href="https://grammobarta.com/cooking/rannabanna-1"><img class="images" src="/images/img-carousel2.jpg" alt=""></a>
                                     <div class="date">31 May 2021</div>
                                     <a href="https://grammobarta.com/cooking/rannabanna-1">
-                                        <h4 class="text-uppercase">Natun kore 15 din er lockdown goshona korlo sorkar.</h4>
+                                        <h4 class="text-uppercase">খুব সহজে বাড়িতেই বানিয়ে ফেলুন ঝুড়ি আলু ভাজা। প্রয়োজনীয় উপকরণ সব আপনার হাতের নাগালে।</h4>
                                     </a>
                                 </div>
                                 <div class="category_posts col_med_4">
                                     <a href="https://grammobarta.com/cooking/rannabanna-1"><img class="images" src="/images/img-carousel1.jpg" alt=""></a>
                                     <div class="date">31 May 2021</div>
                                     <a href="https://grammobarta.com/cooking/rannabanna-1">
-                                        <h4 class="text-uppercase">School college office adalot sob kicu bondho rakhte hbe.</h4>
+                                        <h4 class="text-uppercase"> চিকেন হান্ডি- দুর্দান্ত স্বাদের একদম অন্যরকম এক চিকেনের রেসিপি।  </h4>
                                     </a>
                                 </div>
-                                <div class="category_posts col_med_4">
-                                    <a href="https://grammobarta.com/cooking/rannabanna-1"><img class="images" src="/images/img-carousel2.jpg" alt=""></a>
-                                    <div class="date">31 May 2021</div>
-                                    <a href="https://grammobarta.com/cooking/rannabanna-1">
-                                        <h4 class="text-uppercase">Joruri porisheba,mudi dokan,osudh er dokan,mistir dokan chara somosto kicho bondho thakbe.</h4>
-                                    </a>
+                               
                                 </div>
                             </div>
                         </div>
